--- a/BearURQ.dproj
+++ b/BearURQ.dproj
@@ -107,6 +107,7 @@
         <DCCReference Include="sources\BearURQ.Scenes.pas"/>
         <DCCReference Include="sources\BearURQ.Player.pas"/>
         <DCCReference Include="sources\BearURQ.Location.pas"/>
+        <DCCReference Include="sources\BearURQ.Vars.pas"/>
         <BuildConfiguration Include="Debug">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
