--- a/BearURQ.dproj
+++ b/BearURQ.dproj
@@ -108,6 +108,7 @@
         <DCCReference Include="sources\BearURQ.Player.pas"/>
         <DCCReference Include="sources\BearURQ.Location.pas"/>
         <DCCReference Include="sources\BearURQ.Vars.pas"/>
+        <DCCReference Include="sources\BearURQ.Engine.pas"/>
         <BuildConfiguration Include="Debug">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
