--- a/BearURQ.dproj
+++ b/BearURQ.dproj
@@ -111,6 +111,7 @@
         <DCCReference Include="sources\BearURQ.Engine.pas"/>
         <DCCReference Include="sources\BearURQ.Utils.pas"/>
         <DCCReference Include="sources\BearURQ.Math.pas"/>
+        <DCCReference Include="sources\BearURQ.Quest.pas"/>
         <BuildConfiguration Include="Debug">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
